tests-integration/tests/snapshots/e2e__preambles__check_after.snap
---
source: tests-integration/tests/e2e.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "bom.cs",
      "status": "clean"
    },
    {
      "changed": false,
      "path": "document.xml",
      "status": "clean"
    },
    {
      "changed": false,
      "path": "script.py",
      "status": "clean"
    },
    {
      "changed": false,
      "path": "windows.rs",
      "status": "clean"
    }
  ]
}
