tests-integration/tests/snapshots/e2e__preambles__check_before.snap
---
source: tests-integration/tests/e2e.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": false,
      "path": "bom.cs",
      "status": "missing"
    },
    {
      "changed": false,
      "path": "document.xml",
      "status": "missing"
    },
    {
      "changed": false,
      "path": "script.py",
      "status": "missing"
    },
    {
      "changed": false,
      "path": "windows.rs",
      "status": "missing"
    }
  ]
}
