tests-integration/tests/snapshots/e2e__preambles__format.snap
---
source: tests-integration/tests/e2e.rs
expression: "&report"
---
{
  "files": [
    {
      "changed": true,
      "path": "bom.cs",
      "status": "missing"
    },
    {
      "changed": true,
      "path": "document.xml",
      "status": "missing"
    },
    {
      "changed": true,
      "path": "script.py",
      "status": "missing"
    },
    {
      "changed": true,
      "path": "windows.rs",
      "status": "missing"
    }
  ]
}
